JumpScript/tests/baselines/reference/asyncArrowFunction3_es6.errors.txt
tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunction3_es6.jump(1,20): error TS2372: Parameter 'await' cannot be referenced in its initializer.


==== tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunction3_es6.jump (1 errors) ====
    function f(await = await) {
                       ~~~~~
!!! error TS2372: Parameter 'await' cannot be referenced in its initializer.
    }